# Youtube_Website_content_summarization

./: Dockerfile  README.md  pyproject.toml  requirements.txt
logger/: logging.py
src/config/: config.ini  config.py  model.py
src/config/prompt/: prompt_summarize.py
src/ui/: app.py  sidebar.py
